--- a/src/app/executive/executive/executive.component.scss
+++ b/src/app/executive/executive/executive.component.scss
@@ -1,48 +1,29 @@
-.executive-summary-pins {
+.pins {
   list-style: none;
-  padding: 1em 0;
-  margin: 1em 0;
-}
-
-.executive-summary-pin {
-  margin: 1em 1em 0 0;
-  overflow: visible;
-  width: 100%;
-}
-
-.pin-view {
-  border: 1px solid #ededed;
-  border-radius: 2px;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  margin: 0 auto;
+  margin: 0 0 1em 0;
+  overflow: hidden;
   padding: 0;
-  width: 15em;
 
-  mat-card {
-    cursor: pointer;
+  &:after {
+    clear: left;
+    content: '';
+    display: block;
   }
 
-  mat-card:hover {
-    background: rgba(0,0,0,0.03);
-  }
-
-  mat-card:active {
-    background: rgba(0,0,0,0.1);
+  > li {
+    height: 19em;
+    margin: 1em auto 0;
+    width: 13em;
   }
 }
 
-@media screen and (min-width: 32em) {
-  .executive-summary-pins {
+@media screen and (min-width: 31em) {
+  .pins {
     margin: 0 0 1em -1em;
-    overflow: hidden;
-  }
 
-  .executive-summary-pin {
-    float: left;
-    margin: 1em 0 0 1em;
-    width: 15em;
+    > li {
+      float: left;
+      margin: 1em 0 0 1em;
+    }
   }
 }
