--- a/src/app/executive/region-info-pin/region-info-pin.component.html
+++ b/src/app/executive/region-info-pin/region-info-pin.component.html
@@ -3,8 +3,7 @@
       [link]="link"
       [title]="title">
   <div #regionInfoMap
-      card-image
+      card-content
       class="map"
-      mat-card-image
       (mousemove)="$event.stopPropagation"></div>
 </basic-pin>
