--- a/src/app/shakemap/metadata/input/input.component.html
+++ b/src/app/shakemap/metadata/input/input.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="smInput">
+<div *ngIf="smInput.event_information; let event">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
         <mat-panel-title>
@@ -10,28 +10,28 @@
 
       <dl class="description-table">
         
-        <ng-container *ngIf="smInput['event_information']['event_description']; let description">
+        <ng-container *ngIf="event.event_description; let description">
           <dt>Description</dt>
           <dd>{{ description }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['event_id']; let eventId">
+        <ng-container *ngIf="event.event_id; let eventId">
           <dt>ID</dt>
           <dd>{{ eventId }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['magnitude']; let mag">
+        <ng-container *ngIf="event.magnitude; let mag">
           <dt>Magnitude</dt>
           <dd>{{ mag }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['depth']; let depth">
+        <ng-container *ngIf="event.depth; let depth">
           <dt>Depth</dt>
           <dd>{{ depth | sharedNumber:1:'km' }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['latitude']; let lat">
-          <ng-container *ngIf="smInput['event_information']['longitude']; let lng">
+        <ng-container *ngIf="event.latitude; let lat">
+          <ng-container *ngIf="event.longitude; let lng">
 
             <dt>GPS location</dt>
             <dd [innerHtml]="{'geometry': 
@@ -40,42 +40,42 @@
           </ng-container>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['origin_time']; let oTime">
+        <ng-container *ngIf="event.origin_time; let oTime">
           <dt>Origin time</dt>
           <dd>{{ oTime | date:'medium' }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['mech_src']; let mechSrc">
+        <ng-container *ngIf="event.mech_src; let mechSrc">
           <dt>Mechanism</dt>
           <dd>{{ mechSrc }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['src_mech']; let srcMech">
+        <ng-container *ngIf="event.src_mech; let srcMech">
           <dt>Mechanism source</dt>
           <dd>{{ srcMech }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['location']; let loc">
+        <ng-container *ngIf="event.location; let loc">
           <dt>Location</dt>
           <dd>{{ loc }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['faultfiles']; let faultFiles">
+        <ng-container *ngIf="event.faultfiles; let faultFiles">
           <dt>Fault files</dt>
           <dd>{{ faultFiles }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['fault_ref']; let faultRef">
+        <ng-container *ngIf="event.fault_ref; let faultRef">
           <dt>Fault reference</dt>
           <dd>{{ faultRef }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['seismic_stations']; let stations">
+        <ng-container *ngIf="event.seismic_stations; let stations">
           <dt>Number of seismic stations</dt>
           <dd>{{ stations }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="smInput['event_information']['intensity_observations']; let intObs">
+        <ng-container *ngIf="event.intensity_observations; let intObs">
           <dt>Number of DYFI stations</dt>
           <dd>{{ intObs }}</dd>
         </ng-container>
