--- a/src/app/shakemap/metadata/processing/processing.component.html
+++ b/src/app/shakemap/metadata/processing/processing.component.html
@@ -20,8 +20,27 @@
                       class="mat-header-cell"
                       *matCellDef="let module">
 
-            {{ names.ground_motion_modules[module.type] ? 
-                names.ground_motion_modules[module.type] : module.type }}
+
+            <ng-container *ngIf="names.ground_motion_modules[module.type] as name;
+                                  else noName">
+
+              <ng-container *ngIf="abbreviations[module.type] as abbr;
+                                      else noAbbr">
+
+                <abbr title="{{ abbr }}">{{ name }}</abbr>
+
+              </ng-container>
+
+              <ng-template #noAbbr>
+                {{ name }}
+              </ng-template>
+
+            </ng-container>
+
+            <ng-template #noName>
+              {{ module.type }}
+            </ng-template>
+
 
           </mat-cell>
         </ng-container>
@@ -61,54 +80,54 @@
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-      <dl class="description-table" *ngIf="smProcessing.miscellaneous; let miscellaneous">
+      <dl class="description-table" *ngIf="smProcessing.miscellaneous as miscellaneous">
 
-        <ng-container *ngIf="miscellaneous.bias_max_mag; let biasMaxMag">
+        <ng-container *ngIf="miscellaneous.bias_max_mag as biasMaxMag">
           <dt>Max magnitude to compute bias</dt>
           <dd>{{ biasMaxMag }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.bias_max_range; let biasMaxRange">
+        <ng-container *ngIf="miscellaneous.bias_max_range as biasMaxRange">
           <dt>Maximum distance to include station in bias</dt>
           <dd>{{ biasMaxRange }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.bias_log_amp; let biasLogAmp">
+        <ng-container *ngIf="miscellaneous.bias_log_amp as biasLogAmp">
           <dt>Use log amp to compute bias</dt>
           <dd>{{ biasLogAmp }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.bias_max_bias; let biasMaxBias">
+        <ng-container *ngIf="miscellaneous.bias_max_bias as biasMaxBias">
           <dt>Max allowed bias</dt>
           <dd>{{ biasMaxBias }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.bias_min_bias; let biasMinBias">
+        <ng-container *ngIf="miscellaneous.bias_min_bias as biasMinBias">
           <dt>Use log amp to compute bias</dt>
           <dd>{{ biasMinBias }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.bias_min_stations; let biasMinStations">
+        <ng-container *ngIf="miscellaneous.bias_min_stations as biasMinStations">
           <dt>Min # of stations necessary to compute bias</dt>
           <dd>{{ biasMinStations }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.bias_norm; let biasNorm">
+        <ng-container *ngIf="miscellaneous.bias_norm as biasNorm">
           <dt>Norm of the bias</dt>
           <dd>{{ biasNorm }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.median_dist; let medDist">
+        <ng-container *ngIf="miscellaneous.median_dist as medDist">
           <dt>Median distance used</dt>
           <dd>{{ medDist }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.outlier_deviation_level; let devLevel">
+        <ng-container *ngIf="miscellaneous.outlier_deviation_level as devLevel">
           <dt>Outlier level (# of std dev)</dt>
           <dd>{{ devLevel }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="miscellaneous.outlier_max_mag; let maxMag">
+        <ng-container *ngIf="miscellaneous.outlier_max_mag as maxMag">
           <dt>Max magnitude to flag outliers</dt>
           <dd>{{ maxMag }}</dd>
         </ng-container>
@@ -126,26 +145,26 @@
     </mat-expansion-panel-header>
 
     <ng-template matExpansionPanelContent>
-      <dl class="description-table" *ngIf="smProcessing.shakemap_versions; let versions">
+      <dl class="description-table" *ngIf="smProcessing.shakemap_versions as versions">
 
-        <ng-container *ngIf="versions.shakemap_revision; let smRev">
+        <ng-container *ngIf="versions.shakemap_revision as smRev">
           <dt>Code</dt>
           <dd>{{ smRev }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="versions.shakemap_revision_id; let smRevId">
+        <ng-container *ngIf="versions.shakemap_revision_id as smRevId">
           <dt>Github commit</dt>
           <dd>{{ smRevId }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="versions.map_version; let version">
+        <ng-container *ngIf="versions.map_version as version">
           <dt>Map version</dt>
           <dd>{{ version }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="versions.process_time; let time">
+        <ng-container *ngIf="versions.process_time as time">
           <dt>Date</dt>
-          <dd>{{ time | date:'medium' }}</dd>
+          <dd>{{ time | sharedDate }}</dd>
         </ng-container>
 
       </dl>
@@ -162,14 +181,14 @@
 
     <ng-template matExpansionPanelContent>
 
-      <dl class="description-table" *ngIf="smProcessing.site_response; let siteResp">
+      <dl class="description-table" *ngIf="smProcessing.site_response as siteResp">
 
-        <ng-container *ngIf="siteResp.vs30default; let vs30">
+        <ng-container *ngIf="siteResp.vs30default as vs30">
           <dt>Reference rock Vs30</dt>
           <dd>{{ vs30 }}</dd>
         </ng-container>
 
-        <ng-container *ngIf="siteResp.site_correction; let site">
+        <ng-container *ngIf="siteResp.site_correction as site">
           <dt>Site correction applied</dt>
           <dd>{{ site }}</dd>
         </ng-container>
