Create tensor pipe. Update tests

--- a/src/app/focal-mechanism/focal-mechanism/focal-mechanism.component.html
+++ b/src/app/focal-mechanism/focal-mechanism/focal-mechanism.component.html
@@ -1,24 +1,25 @@
 <!-- productType attribute defines type of product to load -->
 <product-page productType="focal-mechanism">
-
   <!-- container with header attribute is added before attribution -->
   <ng-container header>
-    <h3>Focal Mechanism</h3>
+    <h2>Focal Mechanism</h2>
   </ng-container>
 
-  <div class="row" *ngIf="tensor">
-    <div class="column">
-      <focal-mechanism-attribution [tensor]="tensor"></focal-mechanism-attribution>
-      <shared-nodal-planes [tensor]="tensor"></shared-nodal-planes>
-    </div>
+  <ng-container *ngIf="eventService.product$ | async | sharedTensor as tensor;">
+    <div class="row">
+      <div class="column">
+        <focal-mechanism-attribution [tensor]="tensor"></focal-mechanism-attribution>
+        <shared-nodal-planes [tensor]="tensor"></shared-nodal-planes>
+      </div>
 
-    <div class="column">
-      <shared-beachball
-          [fillColor]="'#ffaa69'"
-          [tensor]="tensor">
-      </shared-beachball>
+      <div class="column">
+        <shared-beachball
+            [fillColor]="'#ffaa69'"
+            [tensor]="tensor">
+        </shared-beachball>
+      </div>
     </div>
-  </div>
+  </ng-container>
 
   <!-- container with footer attribute is added before downloads -->
   <ng-container footer>
