--- a/src/app/product-page/header/header.component.html
+++ b/src/app/product-page/header/header.component.html
@@ -11,9 +11,9 @@
   <ul class="quality-statements">
     <!-- Do not show preferredness for focal-mechanism products -->
     <ng-container *ngIf="product && product.type !== 'focal-mechanism'; else empty">
-      <ng-container *ngIf="isPreferred(); then preferred else unpreferred"></ng-container>
+      <ng-container *ngIf="isPreferred(event, product); then preferred else unpreferred"></ng-container>
     </ng-container>
-    <ng-container *ngIf="isReviewed(); then reviewed else unreviewed"></ng-container>
+    <ng-container *ngIf="isReviewed(product); then reviewed else unreviewed"></ng-container>
   </ul>
 </header>
 
