Removing TODO tag. Though map still needs work, at least you see a map now.

--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -7,7 +7,7 @@
     <app-navigation-item navGroupHeader display="Overview"
         navRouterLink="executive"></app-navigation-item>
 
-    <app-navigation-item display="Interactive Map" class="not-supported"
+    <app-navigation-item display="Interactive Map"
         navRouterLink="map"></app-navigation-item>
     <app-navigation-item display="Regional Information"
         navRouterLink="region-info"></app-navigation-item>
