--- a/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
+++ b/src/app/technical/focal-mechanism-summary/focal-mechanism-summary.component.html
@@ -10,7 +10,7 @@
       <mat-header-cell *matHeaderCellDef>Catalog</mat-header-cell>
       <mat-cell *matCellDef="let tensor" class="unpreferred">
         <a
-            [routerLink]="['/', event?.id, 'origin']"
+            [routerLink]="['/', event?.id, 'focal-mechanism']"
             [queryParams]="{ source: tensor.product.source,
                 code: tensor.product.code }">
           {{ tensor.product.properties.eventsource.toUpperCase() }}
