Replace &ndash with -

--- a/src/app/shakemap/metadata/input/input.component.html
+++ b/src/app/shakemap/metadata/input/input.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="smInput.event_information as eventInfo">
+<div *ngIf="smInput?.event_information as eventInfo">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
