--- a/src/app/executive/region-info-pin/region-info-pin.component.html
+++ b/src/app/executive/region-info-pin/region-info-pin.component.html
@@ -1,5 +1,5 @@
 <basic-pin
-      [product]="event?.getProduct('origin')"
+      [product]="event | getProduct:'origin'"
       [link]="link"
       [title]="title">
   <div #regionInfoMap
