add showScaleControl input to map

--- a/src/app/map/map/map.component.html
+++ b/src/app/map/map/map.component.html
@@ -1,1 +1,4 @@
-<shared-map [showLayersControl]="true"></shared-map>
+<shared-map
+    [showLayersControl]="true"
+    [showScaleControl]="true">
+</shared-map>
