Implement shared regionInfoOverlays pipe

--- a/src/app/region-info/region-info/region-info.component.html
+++ b/src/app/region-info/region-info/region-info.component.html
@@ -1,1 +1,5 @@
-<shared-map [overlays]="overlays"></shared-map>
+<ng-container *ngIf="eventService.event$ | async; let event">
+  <shared-map
+      [overlays]="event | getProduct:'origin' | regionInfoOverlay">
+  </shared-map>
+</ng-container>
