--- a/src/app/region-info/region-info/region-info.component.html
+++ b/src/app/region-info/region-info/region-info.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
   <shared-map
-      [overlays]="event | getProduct:'origin' | regionInfoOverlay">
+      [overlays]="event | getProduct:'origin' | regionInfoOverlays">
   </shared-map>
 </ng-container>
