--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -6,6 +6,10 @@
 
   <ul class="pins">
     <li>
+      <executive-map-pin [event]="event">
+      </executive-map-pin>
+    </li>
+    <li>
       <executive-region-info-pin [event]="event">
       </executive-region-info-pin>
     </li>
