Update styles for leaflet controls

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,4 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 @import './app/shared/css/description-table.scss';
+@import './app/shared/css/leaflet-styles.scss';
