--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -17,7 +17,7 @@
     <app-navigation-item navGroupHeader display="Impact" class="not-supported"
         navRouterLink="impact"></app-navigation-item>
 
-    <app-navigation-item display="Felt Report - Tell Us!" class="not-supported"
+    <app-navigation-item display="Felt Report - Tell Us!"
         navRouterLink="tellus"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('dyfi')"
         display="Did You Feel It?" class="not-supported"
